RESOLVED FIXED133140
REGRESSION (WK2): Tapping on the input field in duckduckgo.com shows the keyboard but not the caret.
https://bugs.webkit.org/show_bug.cgi?id=133140
Summary REGRESSION (WK2): Tapping on the input field in duckduckgo.com shows the keyb...
Enrica Casucci
Reported 2014-05-20 16:46:45 PDT
Launch Safari and navigate to duckduckgo.com tap on the input field Result: the keyboard animates on screen but no caret is displayed in the field and typing does not work. Tapping a second time makes the cursor appear. <rdar://problem/16980898>
Attachments
Patch (1.93 KB, patch)
2014-05-20 16:52 PDT, Enrica Casucci
benjamin: review+
Enrica Casucci
Comment 1 2014-05-20 16:52:03 PDT
Enrica Casucci
Comment 2 2014-05-20 17:14:24 PDT
Committed revision 169142.
Note You need to log in before you can comment on or make changes to this bug.